--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -83,6 +83,9 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
+  justify-content: center;
+  text-align: center;
+  
 }
 
 .card:hover,
